# dust-n-rust

./: Cargo.toml  README.md
assets/backgrounds/: brick_wall.ron  test_bg_foreground.ron
assets/sprites/old_man/: old_man.ron
config/: bindings.ron  display.ron
src/: main.rs  utils.rs
src/components/: animation.rs  camera.rs  level.rs  locomotion.rs  mod.rs  motion.rs  player.rs
src/resources/: backgrounds.rs  mod.rs  prefabs.rs
src/states/: game.rs  load.rs  mod.rs
src/systems/: animation.rs  camera.rs  input.rs  locomotion.rs  mod.rs  motion.rs
