[package]
name = "dust"
version = "0.1.0"
authors = []
edition = "2018"

[dependencies]
serde = "*"
log = "*"

[dependencies.amethyst]
version = "0.15.0"
default-features = false
features = ["json", "animation"]

[features]
default = ["vulkan"]
empty = ["amethyst/empty"]
metal = ["amethyst/metal"]
vulkan = ["amethyst/vulkan"]
